<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Artcodes recognises a different marker scheme that allows the
  ~ creation of aesthetically pleasing, even beautiful, codes.
  ~ Copyright (C) 2013-2016  The University of Nottingham
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as published
  ~     by the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
	<string name="anywhere">Anywhere</string>
	<string name="app_name">Artcodes</string>
	<string name="action_add">Add Action</string>
	<string name="dialog_action_set">Set</string>
	<string name="dialog_action_cancel">Cancel</string>
	<string name="dialog_action_delete">Delete</string>
	<string name="markerCode">Code</string>
	<string name="newMarkerCode">New Code</string>
	<string name="recommended">Recommended</string>
	<string name="recent">Recent</string>
	<string name="more">More</string>
	<string name="gotit">Got It</string>
	<!-- Default WebSites -->
	<string name="URL">URL</string>
	<string name="embeddedChecksum">Embedded Checksum</string>
	<string name="markerDeleteConfirmTitle">Delete Marker %s?</string>
	<string name="markerDeleteConfirmMessage">Marker %s will be permanently deleted</string>
	<string name="experienceDeleteConfirm">Delete %s?</string>
	<string name="save">Save</string>
	<string name="save_to">Save to %s</string>
	<string name="deleteConfirm">Delete</string>
	<string name="deleteCancel">Cancel</string>
	<string name="open_in_browser">Open in Browser</string>
	<string name="experience_add">Add Experience</string>
	<string name="experiences">Experiences</string>
	<string name="experience_edit">Edit Experience</string>
	<string name="experienceTitle">Title</string>
	<string name="experienceDescription">Description</string>
	<string name="experienceIcon">Icon</string>
	<string name="experienceImage">Image</string>
	<string name="actions">Actions</string>
	<string name="markerShowDetail">Show Detail Screen</string>
	<string name="delete">Delete</string>
	<string name="minimum">Minimum</string>
	<string name="maximum">Maximum</string>
	<string name="share">Share</string>
	<string name="download">Download</string>
	<string name="open">Open</string>
	<string name="edit">Edit</string>
	<string name="location">Location</string>
	<string name="start_date">Start Date</string>
	<string name="end_date">End Date</string>
	<string name="scan">Scan</string>
	<string name="events">Events</string>
	<string name="availability">Availability</string>
	<string name="availability_add">Add Availability</string>
	<string name="action_name">Name</string>
	<string name="action_deleted">Deleted</string>
	<string name="action_delete_undo">Undo</string>
	<string name="marker_config">Marker Configuration</string>
	<string name="close">close</string>
	<string name="nav_home">Recommended</string>
	<string name="device">Device</string>
	<string name="nearby">Nearby</string>
	<string name="unstar">Unstar</string>
	<string name="star">Star</string>
	<string name="nav_starred">Starred</string>
	<string name="copy">Copy</string>
	<string name="copy_to">Copy to</string>
	<string name="invert">Invert</string>
	<string name="presets">Presets</string>
	<string name="hue">Hue</string>
	<string name="about">About</string>
	<string name="fragment_info">Info</string>
	<string name="fragment_availability">Availability</string>
	<string name="fragment_action">Actions</string>
	<string name="fragment_colour">Colour</string>
	<string name="nav_features">Features</string>
	<string name="nav_addaccount">Add Account</string>
	<string name="nav_libraries">My Experiences</string>
	<string name="server">Server (%s)</string>
	<string name="availability_private">Unlisted</string>
	<string name="read_more">Read More</string>
	<string name="scan_history">Scan History</string>
	<string name="available_public">Public</string>
	<string name="available_near">Available near %s</string>
	<string name="available_always">Always Available</string>
	<string name="available_from">Available from %s</string>
	<string name="available_to">Available to %s</string>
	<string name="available_between">Available %s</string>
	<string name="available_from_near">Available from %1$s near %2$s</string>
	<string name="available_to_near">Available to %1$s near %2$s</string>
	<string name="available_between_near">Available %1$s near %2$s</string>
	<string name="match_any">Triggered by matching any of these codes</string>
	<string name="match_all">Triggered by matching all of these codes</string>
	<string name="done">Done</string>
	<string name="skip">Skip</string>
	<string name="next_page">Next Page</string>
	<string name="nav_recent">Recent</string>
	<string name="no_actions">No Actions</string>
	<string name="no_actions_action">Tap the + button to create an action</string>
	<string name="availability_deleted">Deleted</string>
	<string name="availability_delete_undo">Undo</string>
	<string name="clear">Clear</string>
	<string name="copy_of">Copy of %s</string>
	<string name="empty">Empty</string>
	<string name="emptyHint">Tap the + button to create an experience</string>
	<string name="about_artcodes_1_title">Create beautiful codes with Artcodes</string>
	<string name="about_artcodes_1">Artcodes allow everyone to become a coder. By drawing visually beautiful images, you can link them to websites to showcase how interaction can become fun and beautiful.</string>
	<string name="about_artcodes_2">Every Artcode has a numerical code which corresponds to the number of blobs and regions of the Artcode. Here, yhe leftmost region contains 2 blobs, the two center regions contain 3 blobs each and the two regions on the right have 1 blob each. So, this Artcode has the code 1:1:2:3:3.</string>
    <string name="about_artcodes_2_image">An artcode</string>
	<string name="about_artcodes_3">Experiences link those codes to web pages, so that when an Artcode is scanned it will take you to the associated web page.</string>
	<string name="about_artcodes_3_button">Learn to Draw Artcodes</string>
	<string name="search">Search</string>
	<string name="action_editable">Editable in copies</string>
	<string name="search_empty">No experiences found matching \"%s\"</string>
    <string name="connection_error">Connection Error</string>
    <string name="scan_artcode">Scan Artcode</string>
    <string name="prev_page">Previous Page</string>
    <string name="next">Next</string>
    <string name="original_experience">Original Experience</string>
	<string name="upload_to_artcodes_co_uk">..or upload to Artcodes.co.uk</string>

	<string name="saving_progress_dialog_title">Saving</string>
	<string name="saving_progress_dialog_message">Please wait…</string>

	<string name="saving_error_title">Error</string>
	<string name="saving_error_message">Could not save changes, please check your internet connection.</string>
	<string name="saving_error_button">OK</string>

	<string name="delete_progress_dialog_title">Deleting</string>
	<string name="delete_progress_dialog_message">Please wait…</string>

	<string name="delete_error_title">Error</string>
	<string name="delete_error_message">Could not delete experience, please check your internet connection.</string>
	<string name="delete_error_button">OK</string>
</resources>
