<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Artcodes recognises a different marker scheme that allows the
  ~ creation of aesthetically pleasing, even beautiful, codes.
  ~ Copyright (C) 2013-2016  The University of Nottingham
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as published
  ~     by the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.AboutArtcodesActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/apptheme_primary"
		android:fitsSystemWindows="true"
		android:orientation="vertical">

		<androidx.viewpager.widget.ViewPager
			android:id="@+id/viewpager"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="64dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/skip_button"
				style="?borderlessButtonStyle"
				android:layout_width="100dp"
				android:layout_height="match_parent"
				android:onClick="finish"
				android:padding="16dp"
				android:text="@string/skip"
				android:textAllCaps="true"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:textColor="#FFF"/>

			<com.viewpagerindicator.CirclePageIndicator
				android:id="@+id/indicator"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_weight="1"
				android:padding="1dp"
				app:fillColor="#FFFFFFFF"
				app:pageColor="#66FFFFFF"
				app:radius="5dp"
				app:strokeColor="#66FFFFFF"/>

			<Button
				android:id="@+id/done_button"
				style="?borderlessButtonStyle"
				android:layout_width="100dp"
				android:layout_height="match_parent"
				android:onClick="finish"
				android:padding="16dp"
				android:textAllCaps="true"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				android:text="@string/done"
				android:textColor="#FFF"
				android:visibility="gone"/>

			<ImageButton
				android:id="@+id/next_button"
				style="?borderlessButtonStyle"
				android:layout_width="100dp"
				android:layout_height="match_parent"
				android:contentDescription="@string/next_page"
				android:onClick="nextPage"
				android:padding="16dp"
				android:src="@drawable/ic_chevron_right_24dp"
				app:tint="#FFF"/>
		</LinearLayout>
	</LinearLayout>
</layout>