<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Artcodes recognises a different marker scheme that allows the
  ~ creation of aesthetically pleasing, even beautiful, codes.
  ~ Copyright (C) 2013-2016  The University of Nottingham
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as published
  ~     by the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activities.ExperienceEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    tools:ignore="UnusedAttribute"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark"
                    app:tabIndicatorColor="@android:color/white"
                    tools:ignore="UnusedAttribute"/>

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>


            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/padding"
                android:elevation="4dp"
                android:src="@drawable/ic_add_24dp"
                android:tint="#FFF"
                android:visibility="gone"
                app:pressedTranslationZ="8dp"
                tools:ignore="UnusedAttribute"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/deleteButton"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete"
                android:onClick="deleteExperience"
                android:src="@drawable/ic_delete_24dp"/>

            <ImageButton
                android:id="@+id/prevButton"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/prev_page"
                android:onClick="prevPage"
                android:src="@drawable/ic_chevron_left_24dp"/>

            <Button
                android:id="@+id/saveButton"
                style="?borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:onClick="saveExperience"
                android:text="@string/save"
                android:visibility="gone"/>

            <Button
                android:id="@+id/nextButton"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:drawableEnd="@drawable/ic_chevron_right_24dp"
                android:drawableRight="@drawable/ic_chevron_right_24dp"
                android:onClick="nextPage"
                android:text="@string/next"/>
        </FrameLayout>
    </LinearLayout>
</layout>