<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Artcodes recognises a different marker scheme that allows the
  ~ creation of aesthetically pleasing, even beautiful, codes.
  ~ Copyright (C) 2013-2016  The University of Nottingham
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as published
  ~     by the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<import type="android.view.View" />

		<variable
			name="experience"
			type="uk.ac.horizon.artcodes.model.Experience" />

		<variable
			name="originalExperience"
			type="uk.ac.horizon.artcodes.model.Experience" />
	</data>

	<androidx.coordinatorlayout.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#EEE"
		android:fitsSystemWindows="true"
		app:contentScrim="?attr/colorPrimary"
		tools:context=".activities.ExperienceActivity">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows="true">

			<com.google.android.material.appbar.CollapsingToolbarLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="#EEE"
				android:fitsSystemWindows="true"
				android:theme="@style/ThemeOverlay.AppCompat.Dark"
				app:contentScrim="?attr/colorPrimary"
				app:layout_scrollFlags="scroll|exitUntilCollapsed"
				app:title="@{experience.name}"
				app:titleEnabled="false">

				<ImageView
					android:id="@+id/experience_image"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:fitsSystemWindows="true"
					android:minHeight="200dp"
					android:scaleType="centerCrop"
					android:visibility="@{experience.image != null ? View.VISIBLE : View.GONE}"
					app:imageUrl="@{experience.image}"
					app:layout_collapseMode="parallax"
					tools:ignore="ContentDescription" />

				<View
					android:layout_width="fill_parent"
					android:layout_height="200dp"
					android:visibility="@{experience.image != null ? View.GONE : View.VISIBLE}"
					app:layout_collapseMode="parallax" />

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:fitsSystemWindows="true"
					android:src="@drawable/image_protection_scrim"
					app:layout_collapseMode="pin"
					tools:ignore="ContentDescription" />

				<androidx.appcompat.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					app:layout_collapseMode="pin"
					app:navigationIcon="@drawable/ic_arrow_back_white_24dp" />
			</com.google.android.material.appbar.CollapsingToolbarLayout>

		</com.google.android.material.appbar.AppBarLayout>

		<androidx.core.widget.NestedScrollView
			android:id="@+id/scroll_view"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="@string/appbar_scrolling_view_behavior">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:orientation="vertical"
				tools:ignore="UnusedAttribute">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					android:background="#FFF"
					android:elevation="1dp"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal"
						android:padding="16dp">

						<ImageView
							android:id="@+id/experience_icon"
							android:layout_width="56dp"
							android:layout_height="56dp"
							android:layout_gravity="center_vertical"
							android:layout_marginEnd="16dp"
							android:layout_marginRight="16dp"
							android:scaleType="fitCenter"
							android:visibility="@{experience.icon == null &amp;&amp; experience.image == null ? View.GONE : View.VISIBLE}"
							app:imageUrl="@{experience.icon ?? experience.image}"
							tools:ignore="ContentDescription"
							tools:src="@mipmap/ic_launcher" />

						<TextView
							android:id="@+id/experienceTitle"
							style="@style/TextAppearance.AppCompat.Title"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_gravity="center_vertical"
							android:layout_marginTop="8dp"
							android:layout_marginBottom="8dp"
							android:layout_weight="1"
							android:text="@{experience.name}"
							tools:text="Artcodes" />

					</LinearLayout>

					<TextView
						android:id="@+id/experienceDescription"
						style="@style/TextAppearance.AppCompat.Body1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:ellipsize="end"
						android:maxLines="@integer/experience_description_max_lines"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:text="@{experience.description}"
						tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />

					<Button
						android:id="@+id/experience_description_more"
						style="@style/Widget.AppCompat.Button.Borderless.Colored"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="-8dp"
						android:onClick="readDescription"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:text="@string/read_more"
						android:visibility="visible" />

					<LinearLayout
						android:id="@+id/experienceLocations"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:paddingLeft="16dp"
						android:paddingRight="16dp">

					</LinearLayout>

					<ProgressBar
						android:id="@+id/saveProgress"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_margin="16dp" />

					<LinearLayout
						android:id="@+id/buttonBar"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginTop="16dp"
						android:gravity="center_horizontal"
						android:orientation="horizontal"
						android:paddingLeft="16dp"
						android:paddingRight="16dp">

						<Button
							android:id="@+id/editButton"
							style="@style/Widget.AppCompat.ActionButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="?attr/selectableItemBackground"
							android:drawableTop="@drawable/ic_edit_24dp"
							android:drawablePadding="4dp"
							android:gravity="center"
							android:onClick="editExperience"
							android:padding="8dp"
							android:text="@string/edit" />

						<Button
							android:id="@+id/copyButton"
							style="@style/Widget.AppCompat.ActionButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="?attr/selectableItemBackground"
							android:drawableTop="@drawable/ic_folder_move_24dp"
							android:drawablePadding="4dp"
							android:gravity="center"
							android:onClick="copyExperience"
							android:padding="8dp"
							android:text="@string/copy" />

						<Button
							android:id="@+id/starButton"
							style="@style/Widget.AppCompat.ActionButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="?attr/selectableItemBackground"
							android:drawableTop="@drawable/ic_star_border_black_24dp"
							android:drawablePadding="4dp"
							android:gravity="center"
							android:onClick="starExperience"
							android:padding="8dp"
							android:text="@string/star" />

						<Button
							android:id="@+id/scanHistoryButton"
							style="@style/Widget.AppCompat.ActionButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="?attr/selectableItemBackground"
							android:drawableTop="@drawable/ic_history_black_24dp"
							android:drawablePadding="4dp"
							android:gravity="center"
							android:onClick="startExperienceHistory"
							android:padding="8dp"
							android:text="@string/scan_history" />

						<Button
							android:id="@+id/shareButton"
							style="@style/Widget.AppCompat.ActionButton"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:background="?attr/selectableItemBackground"
							android:drawableTop="@drawable/ic_share_black_24dp"
							android:drawablePadding="4dp"
							android:gravity="center"
							android:onClick="shareExperience"
							android:padding="8dp"
							android:text="@string/share"
							android:visibility="@{experience.sharable ? View.VISIBLE : View.GONE}" />
					</LinearLayout>
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="end"
					android:padding="8dp"
					android:visibility="@{originalExperience == null ? View.GONE : View.VISIBLE}">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						android:text="@string/original_experience"
						android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

					<androidx.cardview.widget.CardView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						android:minWidth="150dp"
						android:onClick="openOriginalExperience">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="?attr/selectableItemBackground"
							android:gravity="center_vertical"
							android:orientation="vertical">

							<FrameLayout
								android:layout_width="match_parent"
								android:layout_height="100dp">

								<ImageView
									android:layout_width="match_parent"
									android:layout_height="match_parent"
									android:background="#DDD"
									android:scaleType="center"
									android:src="@drawable/ic_group_work_64dp"
									android:visibility="@{originalExperience.image != null || originalExperience.icon != null ? View.GONE : View.VISIBLE}"
									app:tint="#EEE"
									tools:ignore="ContentDescription" />

								<ImageView
									android:layout_width="match_parent"
									android:layout_height="match_parent"
									android:background="#FFF"
									android:scaleType="centerCrop"
									android:visibility="@{originalExperience.image != null || originalExperience.icon != null ? View.VISIBLE : View.GONE}"
									app:imageUrl="@{experience.image ?? experience.icon}"
									tools:ignore="ContentDescription"
									tools:visibility="gone" />
							</FrameLayout>


							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_margin="16dp"
								android:ellipsize="end"
								android:maxLines="3"
								android:text="@{originalExperience.name}"
								android:textAppearance="@style/TextAppearance.AppCompat"
								tools:text="Artcodes" />


						</LinearLayout>
					</androidx.cardview.widget.CardView>
				</LinearLayout>
			</LinearLayout>
		</androidx.core.widget.NestedScrollView>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:background="#FFF"
			android:gravity="center"
			android:visibility="gone"
			tools:visibility="gone">

			<ProgressBar
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>

		<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/padding"
			android:contentDescription="@string/scan_artcode"
			android:elevation="4dp"
			android:onClick="scanExperience"
			android:src="@drawable/ic_photo_camera_black_24dp"
			android:tint="#FFF"
			app:backgroundTint="@color/apptheme_accent"
			app:backgroundTintURL="@{experience.image}"
			app:layout_anchor="@id/appbar"
			app:layout_anchorGravity="bottom|right|end"
			app:pressedTranslationZ="8dp"
			tools:ignore="UnusedAttribute" />
	</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>